--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
+    "react-transition-group": "^4.4.1",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
