--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "passport": "^0.4.1",
     "pusher": "^3.0.1",
     "pusher-js": "^7.0.0",
     "react": "^16.12.0",
