--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://test-lurien.rj.r.appspot.com/"
+  "proxy": "https://test-lurien.rj.r.appspot.com"
 }
