--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.764.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "passport": "^0.4.1",
