--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.764.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "firebase": "^7.22.1",
     "passport": "^0.4.1",
     "pusher": "^3.0.1",
     "pusher-js": "^7.0.0",
@@ -19,7 +20,8 @@
     "react-scripts": "^3.4.3",
     "react-transition-group": "^4.4.1",
     "socket.io-client": "^2.3.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "xhr2": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
