cambie la pagina del mod con los diseños adecuados

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pusher": "^3.0.1",
     "pusher-js": "^7.0.0",
     "react": "^16.12.0",
+    "react-animation": "^1.2.2",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
