--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
+    "react-toast-notifications": "^2.4.0",
     "react-transition-group": "^4.4.1",
     "socket.io-client": "^2.3.0",
     "sweetalert": "^2.1.2",
