habemus grafico y mas front..

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "aws-sdk": "^2.764.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^2.9.3",
     "firebase": "^7.22.1",
     "passport": "^0.4.1",
     "pusher": "^3.0.1",
     "pusher-js": "^7.0.0",
     "react": "^16.12.0",
     "react-animation": "^1.2.2",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
