--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^2.9.3",
+    "dotenv": "^8.2.0",
     "firebase": "^7.22.1",
     "passport": "^0.4.1",
     "pusher": "^3.0.1",
