--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
     "react-toast-notifications": "^2.4.0",
+    "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
     "socket.io-client": "^2.3.0",
     "sweetalert": "^2.1.2",
